# Python-calculator

./: setup.cfg
